--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="Bunifu.UI.WinForms" version="2.0.8" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="GCDesign" version="1.0.0" targetFramework="net472" />
+  <package id="ImageListView" version="13.7.2" targetFramework="net472" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="MaterialSkin.2" version="2.1.2" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
