--- a/Exam_R.csproj
+++ b/Exam_R.csproj
@@ -282,17 +282,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\AppDBContext.cs" />
-    <Compile Include="Meal.cs" />
-    <Compile Include="Meals.cs" />
+    <Compile Include="Class\Used.cs" />
+    <Compile Include="Data\OrderDBContect.cs" />
+    <Compile Include="Data\ReservationDBContect.cs" />
+    <Compile Include="Data\UserDBContext.cs" />
+    <Compile Include="Class\Meal.cs" />
+    <Compile Include="Class\Meals.cs" />
     <Compile Include="UserControls\MenuControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\MenuControl.Designer.cs">
       <DependentUpon>MenuControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Order.cs" />
-    <Compile Include="Reservation.cs" />
+    <Compile Include="Class\Order.cs" />
+    <Compile Include="Class\Reservation.cs" />
     <Compile Include="UserControls\FoodsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -317,20 +320,26 @@
     <Compile Include="UserControls\SignInControl.Designer.cs">
       <DependentUpon>SignInControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="User.cs" />
+    <Compile Include="Class\User.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Class\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\SignUpControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\SignUpControl.Designer.cs">
       <DependentUpon>SignUpControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\UserInfoControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\UserInfoControl.Designer.cs">
+      <DependentUpon>UserInfoControl.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -363,6 +372,9 @@
     <EmbeddedResource Include="UserControls\SignUpControl.resx">
       <DependentUpon>SignUpControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\UserInfoControl.resx">
+      <DependentUpon>UserInfoControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -388,6 +400,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\images %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\name_80px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
